# internet-lab

./: .gitignore  README.md  app.py  pyproject.toml
examples/: creator_growth_model.json
internet_experiment_lab/: __init__.py  core.py  custom_model.py  math_utils.py  tweets.py  visualization.py
internet_experiment_lab/experiments/: __init__.py  economy.py  human_behavior.py  job_market.py  password_strength.py  social_attention.py
tests/: test_api.py  test_custom_model.py  test_experiment_engine.py
