[project]
name = "internet-experiment-lab"
version = "0.1.0"
description = "Synthetic data simulation engine for viral internet experiments."
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
]

[tool.setuptools.packages.find]
include = ["internet_experiment_lab*"]
