[project]
name = "internet-experiment-lab"
version = "0.1.0"
description = "Synthetic data simulation engine for viral internet experiments."
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
include = ["internet_experiment_lab*"]
